[package]
name = "ecdsa_example"
version = "0.1.0"
authors = ["paul@thev.net"]
edition = "2018"

[dependencies]
serde = "1"
candid = "0.7.10"
libsecp256k1 = "0.5.0"

ic-types = { git = "https://github.com/dfinity/ic" }
ic-ic00-types = { git = "https://github.com/dfinity/ic" }
dfn_candid = { git = "https://github.com/dfinity/ic" }
dfn_core = { git = "https://github.com/dfinity/ic" }
