[package]
name = "request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json" ] }
serde_cbor = "0.11.2"
ic-agent = { git = "https://github.com/infinity-swap/agent-rs", branch = "wasm" }
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
candid = "0.7.10"